Bug 100140 - Crash after exiting report editor
Summary: Crash after exiting report editor
Status: CLOSED FIXED
Alias: None
Product: LibreOffice
Classification: Unclassified
Component: Base (show other bugs)
Version:
(earliest affected)
5.2.0.0.alpha1
Hardware: x86-64 (AMD64) Linux (All)
: medium major
Assignee: Thorsten Behrens (allotropia)
URL:
Whiteboard: target:5.3.0 target:5.2.0.1
Keywords: haveBacktrace
: 100328 100435 (view as bug list)
Depends on:
Blocks:
 
Reported: 2016-05-30 13:08 UTC by Buovjaga
Modified: 2016-10-25 18:54 UTC (History)
4 users (show)

See Also:
Crash report or crash signature:


Attachments
GDB trace of crash when clicking Edit (13.50 KB, text/plain)
2016-05-30 13:08 UTC, Buovjaga
Details
console bt logs (11.81 KB, text/plain)
2016-05-30 19:33 UTC, Julien Nabet
Details

Note You need to log in before you can comment on or make changes to this bug.
Description Buovjaga 2016-05-30 13:08:29 UTC
Created attachment 125391 [details]
GDB trace of crash when clicking Edit

1. Open attachment 125331 [details] (from bug 99985)
2. Go to Reports and right-click REPORT and Edit
3. Close the report editor from the X

When running with gdb, it crashed already when clicking Edit. This also happened on Ubuntu with 5.3 from May 26th. Not sure, if the trace is useful.
On Ubuntu, it was harder to make it crash after exiting the editor.

I could not make it crash with 5.1.3.

Arch Linux 64-bit, KDE Plasma 5
Version: 5.3.0.0.alpha0+
Build ID: ab0189433c1593c3c3ccf6a947aa7ba84e806d91
CPU Threads: 8; OS Version: Linux 4.5; UI Render: default; 
Locale: fi-FI (fi_FI.UTF-8)
Built on May 28th 2016
Comment 1 Julien Nabet 2016-05-30 19:33:09 UTC
Created attachment 125399 [details]
console bt logs

On pc Debian x86-64 with master sources updated today, I could reproduce the crash and attached a bt (quite different from the existing one, I don't know why).
Comment 2 Caolán McNamara 2016-05-30 19:53:18 UTC
java deliberately produces SIGSEGVs which is normally handles without it getting to the app. Under gdb, gdb will stop at the SIGSEGV and you have to "cont" to get to the "real" segv. How do you know if its a "real" segv or a java-raised one. I tend to just "up" a few times and see that its all libjvm foo and do cont when I see that and do the same the next time if its also in libjvm stuff.
Comment 3 Caolán McNamara 2016-05-31 10:36:12 UTC
This appears to be triggered by 08cf2fd01064306eef7fdbb5b62320947c4d1089

commit 08cf2fd01064306eef7fdbb5b62320947c4d1089
Author: Thorsten Behrens <Thorsten.Behrens@CIB.de>
Date:   Fri May 20 16:48:00 2016 +0200

    framework: last dispatchInterceptor gets asked first
Comment 4 Caolán McNamara 2016-06-13 10:14:04 UTC
*** Bug 100328 has been marked as a duplicate of this bug. ***
Comment 5 Commit Notification 2016-06-15 16:31:20 UTC
Caolán McNamara committed a patch related to this issue.
It has been pushed to "master":

http://cgit.freedesktop.org/libreoffice/core/commit/?id=38971bd6543143df41192b0552c51a8119d452a0

Resolves: tdf#100140 crash on exit of report design

It will be available in 5.3.0.

The patch should be included in the daily builds available at
http://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
http://wiki.documentfoundation.org/Testing_Daily_Builds

Affected users are encouraged to test the fix and report feedback.
Comment 6 Commit Notification 2016-06-15 16:33:48 UTC
Caolán McNamara committed a patch related to this issue.
It has been pushed to "libreoffice-5-2":

http://cgit.freedesktop.org/libreoffice/core/commit/?id=9b7a33125b3e0e35609a165910453d2954daf95a&h=libreoffice-5-2

Resolves: tdf#100140 crash on exit of report design

It will be available in 5.2.0.1.

The patch should be included in the daily builds available at
http://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
http://wiki.documentfoundation.org/Testing_Daily_Builds

Affected users are encouraged to test the fix and report feedback.
Comment 7 Maxim Monastirsky 2016-06-22 21:19:22 UTC
*** Bug 100435 has been marked as a duplicate of this bug. ***
Comment 8 Alex Thurgood 2016-06-23 15:51:53 UTC
Verified fixed by OP of bug 100435
Comment 9 tim 2016-06-23 16:32:44 UTC
To be fair, I have no idea myself whether the crash on exiting the report editor is that same as that in 100435, so I do not believe this is 'verified' by me.  Someone else should check this one - I have not checked the report editor behaviour.

Sorry for being so pedantic, and I'm sure you people know it was the same fault and fix, but the symptoms were quite different for a dumb user such as myself.
Comment 10 Buovjaga 2016-06-23 17:05:51 UTC
I confirm the crash is gone. Sorry about not commenting earlier.

Arch Linux 64-bit, KDE Plasma 5
Version: 5.3.0.0.alpha0+
Build ID: c13f60e7cd18df6b0ab70289f5b91ee01e4ae126
CPU Threads: 8; OS Version: Linux 4.6; UI Render: default; 
Locale: fi-FI (fi_FI.UTF-8)
Built on June 18th 2016