Resolves: tdf#100140 crash on exit of report design

This was triggered by

This appears to be triggered by 08cf2fd01064306eef7fdbb5b62320947c4d1089

commit 08cf2fd01064306eef7fdbb5b62320947c4d1089
Author: Thorsten Behrens <Thorsten.Behrens@CIB.de>
Date:   Fri May 20 16:48:00 2016 +0200

which changed the order that things registered through
registerDispatchProviderInterceptor are used by, so swap the order of
registerDispatchProviderInterceptor calls here to sync with that

Change-Id: I047e4c7f6cb488c646df717e22c8ac91864c3938